# hola-mundo

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hola_mundo/: main.py
tests/: test_main.py
